themes/default/assets/css/core.css
@font-face {
    font-family: 'Ubuntu';
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: local('Ubuntu Regular'), local('Ubuntu-Regular'), url("../fonts/ubuntu.woff2") format('woff2');
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
  }

/* site */
:root{
    --main-theme-color: #727cf5;
    --main-bg-color: #e6e6e65b;
    --sub-theme-color: #8f75da;
    --main-text-color: #646363;
    --sub-text-color: #979797;
    --sidenav-sub-text-color: #CEDCE4;
    --footer-bg-color: #333333; 
} 

.text-capitalize{
    text-transform: uppercase;
}


body{
    cursor: default;
    font-size: 1rem;
    font-family: 'Ubuntu';
    font-size: 15px;
    font-weight: 400;
}

.content{
    overflow-y: auto;
    color: var(--main-text-color);
    background-color: var(--main-bg-color);
    margin-left: 16.666667%;
}

/* OVERRIDE BUTTON LIGHT CLASS FOR SELECT PICKER
.btn-light {
    background-color: #FFFFFF !important;
} */

.hrsearch{
    display: block; 
    height: 1rem;
    border: 0; 
    border-top: 0.05rem solid var(--sub-theme-color);
    margin: 2rem 0rem 2rem 0rem; 
    padding: 0;
}

h4.page-title{
    color: var(--main-text-color);
    margin-top: 1rem;
}

h5.page-title{
    color: var(--main-text-color);
    margin-top: 1rem;
}

.table{
    background-color: var(--white);
}

.table thead th{
    border: 0rem;
}

/* Bootstrap Checkbox */
.toggle.ios, .toggle-on.ios, .toggle-off.ios { border-radius: 20rem; }
.toggle.ios .toggle-handle { border-radius: 20rem; }

/* ScrollBar */
::-webkit-scrollbar {
    width: 0.7rem;
  }
  
  /* Track */
  /* Handle */
  ::-webkit-scrollbar-thumb {
    background: #b9b8bb5b; 
  }
  
  /* Handle on hover */
  ::-webkit-scrollbar-thumb:hover {
    background: rgba(180, 179, 179, 0.596); 
  }


/* attendance */
/* attendance/index */
.attendanceindex{
    padding: 1rem;
  }

.attendanceindex .card{
    border: 0rem;
}

.attendanceindex .card-header{
    color: var(--sub-theme-color);
    background-color: var(--white);
    border: 0rem;
    font-weight: bold;
}


/* attendance/mark */
.attendancemark{
    padding: 1rem;
}

.attendancemark .attendancefilter{
    padding-top: 2rem;
}

/* attendance/search */
.attendancesearch{
    padding: 1rem;
}

.attendancesearch .attendancefilter{
    padding-top: 2rem;
}



/* common  */
/* common/footer */
.footer{
    background-color: var(--footer-bg-color);
    color: var(--sub-text-color);
    font-size: 80%
}
/* common/topmenu */
.topmenu{
    font-weight: bold;
    height: 7vh;
    color: var(--sub-theme-color);
    background-color: var(--white);
    padding: 1rem;
}

.topmenu .title{
    text-align: left;
}

.topmenu .time{
    text-align: center;
}

.topmenu .messages{
    cursor: pointer;
    padding-right: 2rem;
}

.topmenu .notifications{
    cursor: pointer;
    padding-right: 2rem;
}

.topmenu .settings{
    cursor: pointer;
    padding-right: 3rem;
}

.topmenu i{
    font-size: 2rem;
}

.topmenu .notifications p{
    color: var(--main-theme-color);
}

.topmenu .settings .dropdown-menu .dropdown-item{
    color: var(--main-theme-color);
}

.topmenu .settings .dropdown-menu .dropdown-item:hover{
    font-weight: bold;
    color: var(--sub-theme-color);
    
}

/* common/sidenav */
.left-pane{
    background-image: linear-gradient(135deg,#8f75da 0,#727cf5 60%);
    height: 100vh;
    padding: 0rem;
    overflow-y: auto;
    overflow-x: hidden;
    background: #171a23;
    position: fixed;
    z-index: 1000;
}

.left-pane .logo{
    height: 25vh;
    text-align: center;
}

.left-pane .logo .sidenavusername{
    color: var(--white);
}

.hrsidenav{
    display: block;
    width: 80%; 
    height: 1rem;
    border: 0; 
    border-top: 0.05rem solid var(--sub-text-color);
    margin: 2rem 0rem 2rem 0rem; 
    padding: 0;
}

.sidenav{
    padding: 0rem 0rem 3rem 0rem;
    margin: 0%;
}

.sidenav li{
    cursor: pointer;
    list-style: none;  
}

.sidenav li a{
    text-decoration: none;
    color: var(--nav-sub-text-color);
}

.sidenav li.main-menu{
    font-size: 15px;
    /*color: var(--sidenav-sub-text-color);*/
    color: var(--white);
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 15px;
}

.sidenar li.main-menu.active {
    background: #262a35;
}

.sidenav .main-menu .la {
    margin-right: 15px;
}

.sidenav .main-menu:hover{
    color: var(--white);
    background: #262a35;
}

.sidenav li.main-menu .col-md-9{
    padding-top: 1rem;
    padding-bottom: 1rem;
    align-items: center;
    margin: 0%;
}

.sidenav li.main-menu .col-md-3{
    padding-top: 1rem;
    padding-bottom: 1rem;
    align-items: center;
    margin: 0%;
}

.sidenav li.main-menu a{
    display: flex;
    align-items: center;
}

.sidenav .main-menu .la{
    font-size: 20px;
}

.sidenav .main-menu .la-angle-down{
    font-size: 1rem;
    float: right;
    padding-right: 1rem;
}

.sidenav ul {
    padding-left: 0;
}

.sidenav li.sub-menu{
    padding: 10px;
    padding-left: 50px;
    font-size: 15px;
    color: var(--white);
    background: #131419;
}

.sidenav li.sub-menu .la {
    font-size: 20px;
    margin-right: 15px;
}

.sidenav li.sub-menu:hover{
    background: #1d1f29;
}

.sidenav li.sub-menu a{
    display: flex;
    align-items: center;
}

.sidenav li.sub-menu:hover{
    color: var(--white);
}

.sidenav .sub-menu .la{
    font-size: 1.5rem;
}

/* exam */
/* exam/index */
.examindex{
    padding: 1rem;
}

.examindex .card{
    border: 0px;
}

.examindex .card-header{
    color: var(--sub-theme-color);
    background-color: var(--white);
    border: 0rem;
    font-weight: bold;
}


/* exam/search */
.examsearch{
    padding: 1rem;
}

.examschedule{
    padding: 1rem;
}


/* exam/create */
.examcreate{
    padding: 1rem;
}



/* home */
/* home/index */
.homeindex{
    padding: 1rem;
}



/* parent */
/* parent/index */
.parentindex{
    padding: 1rem;
}


/* parent/search */
.parentsearch{
    padding-top: 4rem;
    padding-bottom: 4rem;
}

.parentsearch .card-header {
    background-color: var(--sub-theme-color);
    color: var(--white);
}

/* parent/add */
.parentadd{
    /*padding: 1rem;*/
    padding-top: 4rem;
    padding-bottom: 4rem;
}

.parentadd .card{
    margin-bottom: 1rem;
}
 
.parentadd .card .card-header{
    cursor: pointer;
    color: var(--white);
    background-color: var(--sub-theme-color);
    border-radius: .25rem;
}



/* login */
/* login/index */
.login{
    background-image: linear-gradient(135deg,#8f75da 0,#727cf5 60%);
    display: flex;
    align-items: center;
    flex-direction: column; 
    justify-content: center;
    width: 100%;
    height: 100vh;
}

.login .title{
    position: static;
}

.login .loginform{
    position: static;
}

.login .title h1{
    color: var(--white);
    
}

.login .title h2{
    color: var(--white);
}



/* result */
/* result/index */
.resultindex{
    padding: 1rem;
}


/* result/search */
.resultsearch{
    padding: 1rem;
}


/* result/add */
.resultadd{
    /*padding: 1rem;*/
    padding-top: 4rem;
    padding-bottom: 4rem;
}

.resultadd .card{
    margin-bottom: 1rem;
}
 
.resultadd .card .card-header{
    cursor: pointer;
    color: var(--white);
    background-color: var(--sub-theme-color);
    border-radius: .25rem;
}



/* staff */
/* staff/index */
.staffindex{
    padding: 1rem;
}


/* staff/search */
.staffsearch{
    padding-top: 4rem;
    padding-bottom: 4rem;
}

.staffsearch .card .card-header {
    background-color: var(--sub-theme-color);
    color: var(--white);
}

.staffsearch .staffsearchfilter input{
    text-align: center;
}


/* staff/add */
.staffadd{
    padding-top: 4rem;
    padding-bottom: 4rem;
}

.staffadd form{
    display: contents;
}

.staffadd .card{
    margin-bottom: 1rem;
}
 
.staffadd .card .card-header{
    cursor: pointer;
    color: var(--white);
    background-color: var(--sub-theme-color);
    border-radius: .25rem;
}



/* student */
/* student/index */
.stuindex{
    padding: 1rem;
}

.stuindex .card{
    border: 0rem;
}

.stuindex .card-header{
    color: var(--sub-theme-color);
    background-color: var(--white);
    border: 0rem;
    font-weight: bold;
}


/* student/search */
.stusearch{
    /*padding: 1rem;*/
    padding-top: 4rem;
    padding-bottom: 4rem;
}

.stusearch .card-header {
    background-color: var(--sub-theme-color);
    color: var(--white)
}

.stusearch .stusearchfilter input{
    text-align: center;
}


/* student/add */
.stuadd{
    padding-top: 4rem;
    padding-bottom: 4rem;
}

.stuadd form{
    display: contents;
}

.stuadd .card{
    margin-bottom: 1rem;
}
 
.stuadd .card .card-header{
    cursor: pointer;
    color: var(--white);
    background-color: var(--sub-theme-color);
    border-radius: .25rem;
}

/* timetable */
/* timetable/index */
.timetableindex{
    padding: 1rem;
}

/* timetable/search */
.timetablesearch{
    padding: 1rem;
}


/* timetablecreate */
.timetablecreate{
    padding: 1rem;
}



/* user */
/* user/index */
.userindex{
    padding: 1rem;
}

.userindex .card{
    border: 0rem;
}

.userindex .card-header{
    color: var(--sub-theme-color);
    background-color: var(--white);
    border: 0rem;
    font-weight: bold;
}



/* user/search */
.usersearch{
    padding: 10rem 20rem 5rem 20rem;
}

.usersearch .usersearchfilter{
    background-color: var(--white);
    padding: 4rem;
    border: 0.05rem solid var(--sub-theme-color);
    text-align: center;
}

.usersearch .usersearchheading{
    color: var(--white);
    background-color: var(--sub-theme-color);
    padding: 1rem;
    text-align: center;
}

.usersearch .usersearchfilter input{
    text-align: center;
}


/* user/add */
.useradd{
    padding: 5rem 20rem 5rem 20rem;
}

.useraddpanel{
    background-color: var(--white);
    color: var(--main-text-color);
    text-align: center;
    border: 0.05rem solid var(--sub-theme-color);
}

.usercreateheading{
    color: var(--white);
    background-color: var(--sub-theme-color);
    padding: 1rem;
}

.usercreatebody{
    padding: 4rem 6rem 4rem 6rem;
}

.usercreatebody input{
   text-align: center;
}

